[package]
name = "nt_hive2"
version = "0.1.0"
edition = "2021"
author = "Jan Starke <jan.starke@posteo.de>"
LICENSE = "GPLv3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["regdump"]
regdump = ["simplelog", "std", "clap", "clap-verbosity-flag"]
std = []

[[bin]]
name = "regdump"
path = "src/regdump.rs"
required-features = ["regdump"]
about = "Dumps a registry hive file"

[lib]
name = "nt_hive2"

[dependencies]
binread = "2.2"
displaydoc = "0.2"
bitflags = "1.3"
encoding_rs = "0.8"
log = {version = "0.4", features = [ "release_max_level_info" ]}
chrono = "0.4"
simplelog = {version="0.11", optional=true}
winstructs = "0.3.0"
anyhow = "1.0"

clap = {version="3", optional=true}
clap-verbosity-flag = {version="1.0.0", optional=true}