[package]
name = "nt_hive2"
version = "2.3.2"
edition = "2021"
author = "Jan Starke <jan.starke@posteo.de>"
license = "GPL-3.0"
description = "forensic parser library for Windows registry hive files"
repository = "https://github.com/janstarke/nt-hive2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["cli"]
cli = ["regdump", "hivescan", "cleanhive"]
regdump = ["simplelog", "std", "clap", "clap-verbosity-flag", "bodyfile"]
hivescan = ["simplelog", "std", "clap", "clap-verbosity-flag", "indicatif"]
cleanhive = ["simplelog", "std", "clap", "clap-verbosity-flag"]
std = []

[[bin]]
name = "regdump"
path = "src/regdump.rs"
required-features = ["regdump", "bodyfile"]
about = "Dumps a registry hive file"

[[bin]]
name = "hivescan"
path = "src/hivescan/main.rs"
required-features = ["hivescan", "bodyfile"]


[[bin]]
name = "cleanhive"
path = "src/cleanhive.rs"
required-features = ["cleanhive"]

[lib]
name = "nt_hive2"
path = "src/lib.rs"

[dependencies]
binread = "2.2"
displaydoc = "0.2"
bitflags = "1.3"
encoding_rs = "0.8"
log = {version = "0.4", features = [ "release_max_level_info" ]}
chrono = "0.4"
simplelog = {version="0.12", optional=true}
winstructs = "0.3.0"
anyhow = "1.0"
thiserror = "1.0"

clap = {version="4", optional=true, features=["wrap_help"]}
clap-verbosity-flag = {version="2.0.0", optional=true}
indicatif = {version="0.16", optional=true}
bodyfile = {version="0.1.4", optional=true}
serde = "1.0.147"
serde_derive = "1.0.147"
