[package]
name = "nt_hive2"
version = "4.2.3"
edition = "2021"
authors = ["Jan Starke <jan.starke@posteo.de>", "Muteb Alqahtani <muteb@securitycolumns.com>"]
license = "GPL-3.0"
description = "forensic parser library for Windows registry hive files"
repository = "https://github.com/dfir-dd/nt-hive2"

[lib]
name = "nt_hive2"
path = "src/lib.rs"

[dependencies]
binread = "2.2"
binwrite = "0.2"
bitflags = "1.3"
encoding_rs = "0.8"
log = "0.4"
chrono = "0.4"
winstructs = "0.3.0"
anyhow = "1.0"
thiserror = "1.0"

marvin32 = "0.1.0"

derive-getters = "0.3"
memoverlay = ">=0.1.3"
#memoverlay = {path="../memoverlay"}
num-traits = "0.2"
num-derive = "0.4"
byteorder = "1.4"
getset = "0.1"
[dev-dependencies]
simplelog = "0.12"
